SpotCommander Android App 7.7

--- a/android/mobile/src/main/res/values/strings.xml
+++ b/android/mobile/src/main/res/values/strings.xml
@@ -33,9 +33,9 @@
     <string name="settings_category_appearance">Appearance</string>
     <string name="settings_category_advanced">Advanced</string>
     <string name="settings_category_links">Links</string>
-    <string name="settings_hide_status_bar_title">Hide status bar</string>
+    <string name="settings_hide_status_bar_title">Hide Status Bar</string>
     <string name="settings_hide_status_bar_summary">Check this to hide the status bar in the app</string>
-    <string name="settings_accelerated_animations_title">Accelerated animations</string>
+    <string name="settings_accelerated_animations_title">Accelerated Animations</string>
     <string name="settings_accelerated_animations_summary">Uncheck this if you experience that the app becomes unresponsive. This is a known issue on some devices running Android versions older than Android 4.4. Unchecking this will not have any effect on Android 4.4 and newer</string>
     <string name="settings_privacy_policy_title">Privacy Policy</string>
     <string name="settings_privacy_policy_summary">View the privacy policy for this app</string>
