--- a/android/wear/src/main/res/values/strings.xml
+++ b/android/wear/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <!-- Project -->
     <string name="project_name">SpotCommander</string>
 
+    <!-- Notification -->
+    <string name="notification_title">SpotCommander</string>
+    <string name="notification_text">Tap to Remote Control</string>
+
     <!-- Various -->
     <string name="image_content_description">Image</string>
 
